# text-editor

./: .gitignore  Cargo.toml
src/: main.rs
src/editor/: buffer.rs  commands.rs  mod.rs
src/ui/: mod.rs  widgets.rs  window.rs
src/utils/: file.rs  mod.rs
